<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#34495E"
    tools:context=".SecondActivity"
    tools:ignore="ExtraText">

    //Title
    <TextView
        android:id="@+id/textView2"
        android:layout_width="244dp"
        android:layout_height="78dp"
        android:gravity="center"
        android:text="@string/textview2"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    //Image
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="199dp"
        android:layout_height="273dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/imagen_secondary"
        android:src="@drawable/android_image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    //Bottom bar
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/gray_500"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="BottomAppBar,MissingConstraints" />

    //Button back
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/gray_200"
        android:onClick="backView"
        android:text="@string/button_back"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomAppBar" />

    //Web View
    <WebView
        android:id="@+id/webview"
        android:layout_width="316dp"
        android:layout_height="262dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>